# bank-imports

./: .gitignore  .tool-versions  AGENTS.md  categories-regex.csv  categories.csv  categories.py  cli.py  dictreadertest.py  file-sig.py  filehandler.py  main.py  mercadopago_adapter.py  nubank_adapter.py  pdf-test.py  pyproject.toml  requirements.txt  rules.py  statement.py  statement_adapter.py  xp_adapter.py
adapters/: __init__.py  base.py  mercadopago.py  nubank.py  pluxee.py  xp.py
core/: rules.py  statement.py
interfaces/cli/: filehandler.py  main.py
interfaces/marimo/: __init__.py  statement_importer.py
interfaces/marimo/__marimo__/session/: statement_importer.py.json
