[project]
name = "bank-imports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.2",
    "marimo>=0.23.0",
    "pandas>=3.0.2",
    "pdfplumber>=0.11.9",
    "pydantic-ai>=1.80.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["adapters*", "interfaces*", "core*"]

[project.scripts]
classify = "interfaces.cli.main:classify"
marimo-run = "interfaces.marimo:run"
marimo-edit = "interfaces.marimo:edit"
